# license-header-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/workflows/: testing.yaml
license_header_checker/: __main__.py  checker.py  exceptions.py  reader.py  reporter.py  writer.py
tests/: test_checker.py  test_comment_reader.py  test_license_writer.py  test_term_reporter.py
