[metadata]
name = license-header-checker
version = 0.1
description = the pre-commit plugin to check that source files has a header with a license
keywords = quality, testing, pre-commit, cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quard/license-header-checker
author = Vadym Zakovinko
author_email = vp.zakovinko@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing :: Acceptance


[options.entry_points]
console_scripts =
    license_header_checker = license_header_checker.__main__:main

[options]
packages = find:
# pre-commit requirements
python_requires = >=3.6.1
install_requires =
  termcolor

[options.extras_require]
test =
  pytest-cov
  pytest-isort

[options.packages.find]
exclude =
    tests*


[flake8]
max-line-length = 120
